force-app/main/default/objects/Area_Code__mdt/Area_Code__mdt.object-meta.xml
<CustomObject>
    <description>https://docs.google.com/spreadsheets/d/1cC6I38y_xA9wt4JXuAUjeGi153JyrnNSxCs1VCXqO80/edit?usp=sharing
Gives Sate, Country, and timezone given an area code in the &#39;1&#39; Country Dial Code</description>
    <label>Area Code</label>
    <pluralLabel>Area Codes</pluralLabel>
</CustomObject>