force-app/main/default/objects/Area_Code__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Spelled out Country name</description>
    <inlineHelpText>Country Name</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>