force-app/main/default/objects/Area_Code__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Spelled out State Name</description>
    <inlineHelpText>State Name of Area Code</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>