force-app/main/default/objects/Area_Code__mdt/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <description>Guess timezone based on region of Area Code</description>
    <inlineHelpText>Best guess at timezone of area code</inlineHelpText>
    <label>Timezone Offset</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>